[tool.poetry]
name = "yolov9-deepsort"
version = "0.1.0"
description = ""
authors = ["thanhphuong1623 <thanh.phuong@aivision.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
utils = "^1.0.2"
torch = "^2.2.1"
imutils = "^0.5.4"
pillow = "^10.2.0"
deep-sort-realtime = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
